<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/abc"
                android:textColor="@color/White" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/button_close"
                android:padding="5dp"
                android:src="@drawable/ic_cancel" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/image" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:background="@color/White"
                android:hint="@string/noi_dung_chu_thich"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/ok"
                android:textColor="@color/White" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/cancel"
                android:textColor="@color/White" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
