<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_dismiss"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlackAlpha">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/White"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gui_hinh_anh"
                android:textColor="@color/White"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/button_close"
                android:padding="6dp"
                android:src="@drawable/ic_cancel" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/image" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/bg_dialog_conent_et"
                android:hint="@string/noi_dung_chu_thich"
                android:padding="5dp"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/gui"
                android:textColor="@color/White"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/huy"
                android:textColor="@color/White"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <include
        layout="@layout/view_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>
